# document-assistant

./: .env  .gitignore  README.md  config.py  data_ingestion.py  docker-compose.yml  evaluation.py  generation.py  pyproject.toml  vector_store.py
backend/: Dockerfile  pyproject.toml
backend/api/: app.py
backend/rag/: config.py  data_ingestion.py  evaluation.py  generation.py  vector_store.py
frontend/: Dockerfile  package-lock.json
frontend/src/: App.tsx  Chat.tsx  UploadModal.tsx
