[project]
name = "chat"
version = "0.1.0"
description = "Chat app for answering questions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.10",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "langchain-ollama>=1.0.1",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=1.0.8",
    "pymupdf>=1.27.1",
    "pypdf>=6.7.1",
    "sentence-transformers>=5.2.3",
]
